update the icon

--- a/Interview.html
+++ b/Interview.html
@@ -8,8 +8,9 @@ permalink: Interview.html
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://simplewebrtc.com/latest.js"></script>
- <link rel="shortcut icon" href="img/doge.ico">
+<link rel="shortcut icon" href="img/doge.png">
+  <script src="http://simplewebrtc.com/latest.js"></script>
+
 <style>
   #remoteVideos video {
       height: 500px;
