--- a/Interview.html
+++ b/Interview.html
@@ -9,7 +9,7 @@ permalink: Interview.html
 <html>
 <head>
   <script src="http://simplewebrtc.com/latest.js"></script>
-
+    <link rel="shortcut icon" href="img/favicon.ico">
 <style>
   #remoteVideos video {
       height: 500px;
